--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="row text-light">
-            <div class="col-6 pt-5 pb-5">
+            <div class="col-6 col-lg-3 pt-5 pb-5">
                 <label for="exampleFormControlInput1" class="form-label">La ringraziamo per aver scelto il nostro servizio, la Sua nuova password è: </label>
                 <textarea id="safepassword" class="form-control" id="exampleFormControlTextarea1" rows="1"> </textarea>
             </div>
